[gd_scene load_steps=8 format=3 uid="uid://c2772scb863ba"]

[ext_resource type="Script" path="res://Map/base.gd" id="1_0bl6c"]
[ext_resource type="Texture2D" uid="uid://bthjn5o0fm4w8" path="res://Map/base2/base3.png" id="2_e3mbf"]
[ext_resource type="Texture2D" uid="uid://wp0dmrnycv7f" path="res://Map/base2/base2.png" id="3_ske8j"]
[ext_resource type="Texture2D" uid="uid://b0duiny5g5rxl" path="res://Map/base2/base1.png" id="4_pmtoy"]
[ext_resource type="PackedScene" uid="uid://chuhcfppmw1dd" path="res://Units/Usables/other_animation.tscn" id="6_4lloa"]
[ext_resource type="PackedScene" uid="uid://b66twah3ba66x" path="res://Units/Usables/health_bar.tscn" id="6_xnhpx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_26yfu"]
radius = 90.0
height = 234.0

[node name="Base1" type="StaticBody2D"]
z_index = 1
script = ExtResource("1_0bl6c")

[node name="Cave4" type="Sprite2D" parent="."]
position = Vector2(-119, 50)
texture = ExtResource("2_e3mbf")

[node name="Side" type="Sprite2D" parent="."]
metadata/_edit_lock_ = true

[node name="Cave3" type="Sprite2D" parent="Side"]
position = Vector2(0, -12)
texture = ExtResource("3_ske8j")
metadata/_edit_lock_ = true

[node name="Cave1" type="Sprite2D" parent="Side"]
z_index = 3
position = Vector2(-98, -102)
texture = ExtResource("4_pmtoy")
metadata/_edit_lock_ = true

[node name="LimitSpace" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(43, -303, 17, -151, -4, -122, -34, -98, -126, -98, -126, 87, -4, 86, 13, 130, 29, 302, -173, 303, -174, -303)
metadata/_edit_lock_ = true

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(-30, -28)
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_26yfu")
debug_color = Color(0.909804, 0.266667, 0.356863, 0.219608)
metadata/_edit_lock_ = true

[node name="HealthBar" parent="." instance=ExtResource("6_xnhpx")]
z_index = 4
offset_left = -103.0
offset_top = -331.0
offset_right = 91.0
offset_bottom = -281.0

[node name="TeamBox" type="StaticBody2D" parent="."]
position = Vector2(-30, -28)
collision_layer = 6
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TeamBox"]
shape = SubResource("CapsuleShape2D_26yfu")
debug_color = Color(0.0470588, 0.576471, 0.819608, 0.219608)
metadata/_edit_lock_ = true

[node name="OtherAnimation" parent="." instance=ExtResource("6_4lloa")]
